After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 618190 - Fix callbacks with scope=call that call the callback multiple times
Fix callbacks with scope=call that call the callback multiple times
Status: RESOLVED FIXED
Product: gjs
Classification: Bindings
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gjs-maint
gjs-maint
Depends on:
Blocks: 618189
 
 
Reported: 2010-05-09 18:04 UTC by Owen Taylor
Modified: 2010-05-10 15:06 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix callbacks with scope=call that call the callback multiple times (1.37 KB, patch)
2010-05-09 18:04 UTC, Owen Taylor
committed Details | Review

Description Owen Taylor 2010-05-09 18:04:32 UTC
A callback with scope=call is allowed to be called multiple times
before the call returns. For this reason, we can't treat the
trampoline like a scope=async trampoline and schedule it for
freeing when the callback returns, instead we need to free it
when outer call returns.
Comment 1 Owen Taylor 2010-05-09 18:04:33 UTC
Created attachment 160649 [details] [review]
Fix callbacks with scope=call that call the callback multiple times
Comment 2 Colin Walters 2010-05-10 14:37:01 UTC
Review of attachment 160649 [details] [review]:

Looks right, thanks!
Comment 3 Owen Taylor 2010-05-10 15:06:05 UTC
Attachment 160649 [details] pushed as 1dc7966 - Fix callbacks with scope=call that call the callback multiple times