Fix callbacks with scope=call that call the callback multiple times

A callback with scope=call is allowed to be called multiple times
before the call returns. For this reason, we can't treat the
trampoline like a scope=async trampoline and schedule it for
freeing when the callback returns, instead we need to free it
when outer call returns.

https://bugzilla.gnome.org/show_bug.cgi?id=618190